--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Links to our additional CSS styles -->
     <link rel="stylesheet" href="css/styles.css">
 
-    <title>Firstname Lastname's Resumé</title>
+    <title>Tamar Sopacua</title>
   </head>
   <!-- End of the head -->
 
