CSS file opnieuw toegevoegd
- in de juist folder toegevoegd
- html ook opnieuw toegevoegd
- vorige versie was niet goed

--- a/index.html
+++ b/index.html
@@ -14,8 +14,14 @@
     <!-- Links to our additional CSS styles -->
     <link rel="stylesheet" href="css/styles.css">
 
-    <title>Tamar Sopacua</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Madimi+One&display=swap" rel="stylesheet">
+
+
+    <title>Tamar Sopacua CV</title>
   </head>
+
   <!-- End of the head -->
 
   <!-- Start of the body, which contains everything visible on the page -->
@@ -49,8 +55,8 @@
           A container to wrap around your name and tagline. Full-width at small size, then columns of increasing size.
         -->
         <div class="col-12 col-sm-8 col-md-9 col-lg-10 my-3 header-content">
-          <h1 class="fw-bolder">Firstname Lastname</h1>
-          <h5 class="fst-italic tagline">Your expert in creative marketing.</h5>
+          <h1 class="fw-bolder">Tamar Sopacua</h1>
+          <h5 class="fst-italic tagline">Media Professional.</h5>
         </div>
       </header>
 
@@ -84,13 +90,13 @@
                   <img class="biography-logo mw-100 d-block mx-auto" src="images/employers/projector.svg" alt="Company logo" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
-                  <h4>Production Assistant, Production Company</h4>
-                  <h5>April&ndash;July 2019</h5>
+                  <h4>Stylist & sales, Sissy Boy</h4>
+                  <h5>November 2022&ndash;present</h5>
                   <!-- Use the list below to talk about your achievements -->
                   <ul class="biography-details list-unstyled">
-                    <li>Coordinated shootings in studio and on location</li>
-                    <li>Liaised with local authorities and with suppliers</li>
-                    <li>Part of my studies at Breda University of Applied Sciences</li>
+                    <li>Style advisior for customers in store</li>
+                    <li>Day responsible</li>
+                    <li>Assistant Visual Merchandise</li>
                   </ul>
                 </div>
               </li>
@@ -102,9 +108,14 @@
                   <img class="biography-logo mw-100 d-block mx-auto" src="images/employers/trolley.svg" alt="Company logo" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
-                  <h4>Supermarket Employee, Supermarket chain</h4>
-                  <h5>2018</h5>
+                  <h4>Production assistent & Junior Editor, Warner Bros International Television Production</h4>
+                  <h5>February 2022&ndash;July 2022</h5>
                   <!-- This entry doesn't have a list of achievements, but you can copy-paste the one from above -->
+                  <ul class="biography-details list-unstyled">
+                    <li>First Dates S10 & S10</li>
+                    <li>Last One Laughing</li>
+                    <li>Secret Duets</li>
+                  </ul>
                 </div>
               </li>
 
@@ -127,9 +138,9 @@
                   <h5>2018&nbsp;&ndash;&nbsp;now</h5>
                   <!-- Use the list below to talk about minors, exchanges, extra-curricular activities. -->
                   <ul class="biography-details list-unstyled">
-                    <li>Member of the student participation council</li>
-                    <li>Minor in resilient entrepreneurship</li>
-                    <li>Exchange with Bournemouth University</li>
+                    <li>Design Experiencel</li>
+                    <li>1 month exchange with Bournemouth University</li>
+                    <li>Propedeuse acheived</li>
                   </ul>
                 </div>
               </li>
@@ -140,10 +151,12 @@
                   <img class="biography-logo mw-100 d-block mx-auto" src="images/schools/school.svg" alt="School logo" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
-                  <h4>High School Diploma, City High School</h4>
-                  <h5>2018</h5>
+                  <h4>RSG Lingecollege</h4>
+                  <h5>2013-2019</h5>
                   <ul class="biography-details list-unstyled">
-                    <li>Audiovisual media specialization</li>
+                    <li>Editor-in-chief yearbook</li>
+                    <li>Junior mentor</li>
+                    <li>Class representative</li>
                   </ul>
                 </div>
               </li>
@@ -172,15 +185,15 @@
             -->
             <ul class="contact-list list-unstyled">
               <li class="contact-item">
-                <a class="d-flex align-items-center" href="mailto:email@buas.nl" target="_blank">
+                <a class="d-flex align-items-center" href="mailto:222893@buas.nl" target="_blank">
                   <img class="contact-icon" src="images/icons/envelope.svg" alt="Email">
-                  email@buas.nl
+                  222893@buas.nl
                 </a>
               </li>
               <li class="contact-item">
                 <a class="d-flex align-items-center" href="https://facebook.com/" target="_blank">
                   <img class="contact-icon" src="images/icons/facebook.svg" alt="Facebook">
-                  Facebook Profile
+                  My Facebook
                 </a>
               </li>
               <li class="contact-item">
@@ -190,9 +203,9 @@
                 </a>
               </li>
               <li class="contact-item">
-                <a class="d-flex align-items-center" href="https://www.tiktok.com/@bredauniversityas" target="_blank">
+                <a class="d-flex align-items-center" href="www.linkedin.com/in/tamar-sopacua-037aa1192" target="_blank">
                   <img class="contact-icon" src="images/icons/tiktok.svg" alt="Mobile Phone">
-                  TikTok @bredauniversityas
+                  My Linkedin
                 </a>
               </li>
             </ul>
@@ -201,7 +214,7 @@
           <!-- End of contact details, moving on to languages -->
 
           <section class="my-3 aside-section">
-            <h2>Languages</h2>
+            <h2 class="my font">Languages</h2>
             <!-- Each item in the list is a language. Modify, add or remove depending on what you speak -->
             <ul class="language-list list-unstyled">
               <li class="language-item d-flex mb-1">
