changed text skills & interest/hobbies
- Added French as language
- Added skills and hobbies

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                 </div>
               </li>
               <li class="language-item d-flex mb-1">
-                <h5 class="language-name w-50">Spanish</h5>
+                <h5 class="language-name w-50">French</h5>
                 <div class="language-level w-50 border border-info border-2 position-relative">
                   <!-- The div below is a progress bar. Choose between w-25, w-50, w-75 and w-100 to show your level of fluency -->
                   <div class="language-progress position-absolute bg-warning h-100 w-50"></div>
@@ -257,9 +257,10 @@
           <section class="my-3 aside-section">
             <h2>Other Skills</h2>
             <ul class="skill-list list-unstyled">
-              <li class="skill-item">Team player</li>
-              <li class="skill-item">Microsoft Office Power User</li>
-              <li class="skill-item">Driving Licence</li>
+              <li class="skill-item">Enthusiastic</li>
+              <li class="skill-item">Positive</li>
+              <li class="skill-item">Social</li>
+              <li class="skill-item">Teamplayer</li>
             </ul>
           </section>
 
@@ -268,8 +269,8 @@
           <section class="my-3 aside-section">
             <h2>Interests &amp; Hobbies</h2>
             <ul class="skill-list list-unstyled">
-              <li class="skill-item">Formula 1 Driver</li>
-              <li class="skill-item">Netflix Binge-Watcher</li>
+              <li class="skill-item">Styling</li>
+              <li class="skill-item">Running</li>
             </ul>
           </section>
 
