--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             "w-100" makes sure the image takes the full width of the column it's in
             "rounded-circle" cuts a circle around the image
           -->
-          <img class="w-100 rounded-circle my-3" src="images/portrait.svg" alt="Portrait of Firstname Lastname" width="160">
+          <img class="w-100 rounded-circle my-3" src="images/portrait/Tamar foto professioneel.jpg" alt="Portrait of Firstname Lastname" width="160">
         </div>
         <!--
           A container to wrap around your name and tagline. Full-width at small size, then columns of increasing size.
@@ -87,7 +87,7 @@
               <li class="biography-item row mb-2">
                 <!-- We're using a grid inside a grid so we can align logos and text -->
                 <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
-                  <img class="biography-logo mw-100 d-block mx-auto" src="images/employers/projector.svg" alt="Company logo" width="80">
+                  <img class="biography-logo mw-100 d-block mx-auto" src="images/employers/sissy boy logo.png" alt="Company logo" width="180">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
                   <h4>Stylist & sales, Sissy Boy</h4>
@@ -105,7 +105,7 @@
               <li class="biography-item row mb-2">
                 <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
                 <!-- We're using a grid inside a grid so we can align logos and text -->
-                  <img class="biography-logo mw-100 d-block mx-auto" src="images/employers/trolley.svg" alt="Company logo" width="80">
+                  <img class="biography-logo mw-100 d-block mx-auto" src="images/employers/wbitvp_netherlands_logo.png" alt="Company logo" width="150">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
                   <h4>Production assistent & Junior Editor, Warner Bros International Television Production</h4>
@@ -148,7 +148,7 @@
               <!-- 2nd item in education -->
               <li class="biography-item row mb-2">
                 <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
-                  <img class="biography-logo mw-100 d-block mx-auto" src="images/schools/school.svg" alt="School logo" width="80">
+                  <img class="biography-logo mw-100 d-block mx-auto" src="images/schools/lingecollege logo.jpg" alt="School logo" width="180">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
                   <h4>RSG Lingecollege</h4>
@@ -198,13 +198,13 @@
               </li>
               <li class="contact-item">
                 <a class="d-flex align-items-center" href="https://github.com/" target="_blank">
-                  <img class="contact-icon" src="images/icons/github.svg" alt="LinkedIn">
+                  <img class="contact-icon" src="images/icons/github.svg" alt="LinkedIn" width="30">
                   GitHub Profile
                 </a>
               </li>
               <li class="contact-item">
                 <a class="d-flex align-items-center" href="www.linkedin.com/in/tamar-sopacua-037aa1192" target="_blank">
-                  <img class="contact-icon" src="images/icons/tiktok.svg" alt="Mobile Phone">
+                  <img class="contact-icon" src="images/icons/linkedin logo.jpg" alt="Mobile Phone">
                   My Linkedin
                 </a>
               </li>
@@ -241,14 +241,7 @@
                   <h6 class="position-absolute w-100 text-center top-0 py-1">Advanced</h6>
                 </div>
               </li>
-              <li class="language-item d-flex mb-1">
-                <h5 class="language-name w-50">German</h5>
-                <div class="language-level w-50 border border-info border-2 position-relative">
-                  <!-- The div below is a progress bar. Choose between w-25, w-50, w-75 and w-100 to show your level of fluency -->
-                  <div class="language-progress position-absolute bg-warning h-100 w-25"></div>
-                  <h6 class="position-absolute w-100 text-center top-0 py-1">Beginner</h6>
-                </div>
-              </li>
+                         
             </ul>
           </section>
 
@@ -269,8 +262,10 @@
           <section class="my-3 aside-section">
             <h2>Interests &amp; Hobbies</h2>
             <ul class="skill-list list-unstyled">
-              <li class="skill-item">Styling</li>
+              <li class="skill-item">(Event)styling</li>
               <li class="skill-item">Running</li>
+              <li class="skill-item">Cooking</li>
+
             </ul>
           </section>
 
