New linkedin link
- linkedin link is changed to the correct one

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                   <h5>2018&nbsp;&ndash;&nbsp;now</h5>
                   <!-- Use the list below to talk about minors, exchanges, extra-curricular activities. -->
                   <ul class="biography-details list-unstyled">
-                    <li>Design Experiencel</li>
+                    <li>Design Experience</li>
                     <li>1 month exchange with Bournemouth University</li>
                     <li>Propedeuse acheived</li>
                   </ul>
@@ -148,7 +148,7 @@
               <!-- 2nd item in education -->
               <li class="biography-item row mb-2">
                 <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
-                  <img class="biography-logo mw-100 d-block mx-auto" src="images/schools/lingecollege logo.jpg" alt="School logo" width="180">
+                  <img class="biography-logo mw-100 d-block mx-auto" src="images/schools/lingecollege logo.jpg" alt="School logo" width="200">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
                   <h4>RSG Lingecollege</h4>
@@ -203,7 +203,7 @@
                 </a>
               </li>
               <li class="contact-item">
-                <a class="d-flex align-items-center" href="www.linkedin.com/in/tamar-sopacua-037aa1192" target="_blank">
+                <a class="d-flex align-items-center" href="https://www.linkedin.com/in/tamar-sopacua-037aa1192/" target="_blank">
                   <img class="contact-icon" src="images/icons/linkedin logo.jpg" alt="Mobile Phone">
                   My Linkedin
                 </a>
