Last changes before handing in
- name conventions changed (no spaces)
- changed the whole body font to monteserrat
- Correct link to my facebook

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             "w-100" makes sure the image takes the full width of the column it's in
             "rounded-circle" cuts a circle around the image
           -->
-          <img class="w-100 rounded-circle my-3" src="images/portrait/Tamar foto professioneel.jpg" alt="Portrait of Firstname Lastname" width="160">
+          <img class="w-100 rounded-circle my-3" src="images/portrait/Tamar-foto-professioneel.jpg" alt="Portrait of Firstname Lastname" width="160">
         </div>
         <!--
           A container to wrap around your name and tagline. Full-width at small size, then columns of increasing size.
@@ -76,7 +76,7 @@
             <section> is yet another semantic element. The first one is for professional experience.
           -->
           <section class="my-3 biography-section">
-            <h2>Professional Experience</h2>
+            <h2>Work Experience</h2>
             <!--
               Each list item (li) in the unordered list (ul) below will be one job.
               "list-unstyled" is a class that hides the bullet points of a list.
@@ -87,7 +87,7 @@
               <li class="biography-item row mb-2">
                 <!-- We're using a grid inside a grid so we can align logos and text -->
                 <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
-                  <img class="biography-logo mw-100 d-block mx-auto" src="images/employers/sissy boy logo.png" alt="Company logo" width="180">
+                  <img class="biography-logo mw-100 d-block mx-auto" src="images/employers/sissyboy-logo.png" alt="Company logo" width="180">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
                   <h4>Stylist & sales, Sissy Boy</h4>
@@ -125,17 +125,17 @@
           <!-- We're done with jobs, let's move on to schools -->
 
           <section class="my-3 biography-section">
-            <h2>Education</h2>
+            <h2>(Previous)Education</h2>
             <ul class="biography-list list-unstyled">
 
               <!-- Top item in education. And by "top", I mean a Bachelor in Creative Business at BUas. -->
               <li class="biography-item row mb-2">
                 <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
-                  <img class="biography-logo mw-100 d-block mx-auto" src="images/schools/logo-buas.svg" alt="School logo" width="120">
+                  <img class="biography-logo mw-100 d-block mx-auto" src="images/schools/buaslogo-black.jpg" alt="School logo" width="120">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
-                  <h4>BA in Creative Business, Breda University of Applied Sciences</h4>
-                  <h5>2018&nbsp;&ndash;&nbsp;now</h5>
+                  <h4>BA Creative Business, Breda University of Applied Sciences</h4>
+                  <h5>2023&nbsp;&ndash;&nbsp;present</h5>
                   <!-- Use the list below to talk about minors, exchanges, extra-curricular activities. -->
                   <ul class="biography-details list-unstyled">
                     <li>Design Experience</li>
@@ -148,10 +148,10 @@
               <!-- 2nd item in education -->
               <li class="biography-item row mb-2">
                 <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
-                  <img class="biography-logo mw-100 d-block mx-auto" src="images/schools/lingecollege logo.jpg" alt="School logo" width="200">
+                  <img class="biography-logo mw-100 d-block mx-auto" src="images/schools/lingecollege-logo.jpg" alt="School logo" width="200">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
-                  <h4>RSG Lingecollege</h4>
+                  <h4>RSG Lingecollege - VWO, atheneum </h4>
                   <h5>2013-2019</h5>
                   <ul class="biography-details list-unstyled">
                     <li>Editor-in-chief yearbook</li>
@@ -191,7 +191,7 @@
                 </a>
               </li>
               <li class="contact-item">
-                <a class="d-flex align-items-center" href="https://facebook.com/" target="_blank">
+                <a class="d-flex align-items-center" href="https://www.facebook.com/tamar.sopacua/?locale=nl_NL" target="_blank">
                   <img class="contact-icon" src="images/icons/facebook.svg" alt="Facebook">
                   My Facebook
                 </a>
@@ -199,12 +199,12 @@
               <li class="contact-item">
                 <a class="d-flex align-items-center" href="https://github.com/" target="_blank">
                   <img class="contact-icon" src="images/icons/github.svg" alt="LinkedIn" width="30">
-                  GitHub Profile
+                  My github
                 </a>
               </li>
               <li class="contact-item">
                 <a class="d-flex align-items-center" href="https://www.linkedin.com/in/tamar-sopacua-037aa1192/" target="_blank">
-                  <img class="contact-icon" src="images/icons/linkedin logo.jpg" alt="Mobile Phone">
+                  <img class="contact-icon" src="images/icons/linkedin-logo.jpg" alt="Mobile Phone">
                   My Linkedin
                 </a>
               </li>
